# static_fmt

./: CMakeLists.txt
dependent_projects/: CMakeLists.txt  CMakeListsCompiler.txt  dependencies.txt
include/daw/: static_fmt.h
tests/: static_fmt_test.cpp
